k8s/wallets/wallet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /v1/wallet/$2
spec:
  ingressClassName: nginx
  rules:
  - host: api.rnr.local
    http:
      paths:
      - path: /v1/wallet(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wallet-service
            port:
              number: 8004
